Fixing regression with bigfoot button colors in dark mode

--- a/src/css/bigfoot-number.css
+++ b/src/css/bigfoot-number.css
@@ -14,7 +14,6 @@
     border: none;
     border-radius: 0.3em;
     cursor: pointer;
-    background-color: rgba(0, 122, 255, 0.1);
     -webkit-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
     backface-visibility: hidden;
@@ -28,36 +27,20 @@
     -webkit-transition-duration: 0.25s;
     transition-duration: 0.25s;
 }
-#dark .bigfoot-footnote__button {
-    background-color: rgba(0, 122, 255, 0.15);
-}
-
 .bigfoot-footnote__button:hover,
-.bigfoot-footnote__button:focus,
-#dark .bigfoot-footnote__button:hover,
-#dark .bigfoot-footnote__button:focus {
+.bigfoot-footnote__button:focus{
     outline: none;
-    background-color: #007AFF;
 }
-
-.bigfoot-footnote__button:active,
-#dark .bigfoot-footnote__button:active {
-    background-color: rgb(0, 99, 206);
-}
-
 .bigfoot-footnote__button.is-active,
 #dark .bigfoot-footnote__button.is-active {
-    background-color: rgb(0, 99, 206);
     -webkit-transition-delay: 0.1s;
     transition-delay: 0.1s;
 }
-
 .bigfoot-footnote__button:after {
     content: '';
     display: table;
     clear: both;
 }
-
 .bigfoot-footnote__button__circle {
     display: inline-block;
     width: 0.25em;
@@ -65,30 +48,25 @@
     margin-right: 0.25em;
     float: left;
 }
-
 .bigfoot-footnote__button__circle:last-child {
     margin-right: 0;
 }
-
 .bigfoot-footnote__container {
     display: inline-block;
     position: relative;
     text-indent: 0;
 }
-
 @media not print {
     .footnote-print-only {
         display: none !important;
     }
 }
-
 @media print {
     .bigfoot-footnote,
     .bigfoot-footnote__button {
         display: none !important;
     }
 }
-
 .bigfoot-footnote {
     position: absolute;
     z-index: 10;
@@ -120,19 +98,16 @@
     -ms-transform-origin: 50% 0;
     transform-origin: 50% 0;
 }
-
 .bigfoot-footnote.is-positioned-top {
     top: auto;
     bottom: 0;
 }
-
 .bigfoot-footnote.is-active {
     -webkit-transform: scale(1) translateZ(0);
     -ms-transform: scale(1) translateZ(0);
     transform: scale(1) translateZ(0);
     opacity: 1;
 }
-
 .bigfoot-footnote.is-bottom-fixed {
     position: fixed;
     bottom: 0;
@@ -150,13 +125,11 @@
     -webkit-transition: -webkit-transform 0.3s ease;
     transition: transform 0.3s ease;
 }
-
 .bigfoot-footnote.is-bottom-fixed.is-active {
     -webkit-transform: translateY(0);
     -ms-transform: translateY(0);
     transform: translateY(0);
 }
-
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__wrapper {
     margin: 0 0 0 50%;
     -webkit-transform: translateX(-50%);
@@ -164,16 +137,13 @@
     transform: translateX(-50%);
     max-width: 100%;
 }
-
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__wrapper,
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__content {
     border-radius: 0;
 }
-
 .bigfoot-footnote.is-bottom-fixed .bigfoot-footnote__tooltip {
     display: none;
 }
-
 .bigfoot-footnote.is-scrollable:after {
     content: '';
     position: absolute;
@@ -193,7 +163,6 @@
     -webkit-transition-timing-function: ease;
     transition-timing-function: ease;
 }
-
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:before,
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:after {
     content: '';
@@ -202,30 +171,25 @@
     z-index: 12;
     left: 0;
 }
-
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:before {
     top: -1px;
     height: 1.1em;
     border-radius: 0.5em 0.5em 0 0;
 }
-
 .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:after {
     bottom: -1px;
     height: 1.2em;
     border-radius: 0 0 0.5em 0.5em;
 }
-
 .bigfoot-footnote.is-scrollable ::-webkit-scrollbar {
     display: none;
 }
-
 .bigfoot-footnote.is-fully-scrolled:after,
 .bigfoot-footnote.is-fully-scrolled:before {
     opacity: 0;
     -webkit-transition-delay: 0;
     transition-delay: 0;
 }
-
 .bigfoot-footnote__wrapper {
     position: relative;
     z-index: 14;
@@ -240,7 +204,6 @@
     border-radius: 0.35em;
     line-height: 0;
 }
-
 .bigfoot-footnote__content {
     position: relative;
     z-index: 8;
@@ -261,19 +224,15 @@
     font-size: 85%;
     line-height: 1.4em;
 }
-
 .bigfoot-footnote__content img {
     max-width: 100%;
 }
-
 .bigfoot-footnote__content *:last-child {
     margin-bottom: 0 !important;
 }
-
 .bigfoot-footnote__content *:first-child {
     margin-top: 0 !important;
 }
-
 .bigfoot-footnote__tooltip {
     position: absolute;
     z-index: 12;
@@ -292,22 +251,18 @@
     box-shadow: 0 8px 16px rgba(0,0,0,0.25);
     border-top-left-radius: 0;
 }
-
 .is-positioned-bottom .bigfoot-footnote__tooltip {
     top: -0.65em;
 }
-
 .is-positioned-top .bigfoot-footnote__tooltip {
     bottom: -0.65em;
 }
-
 .bigfoot-footnote__button {
     position: relative;
     height: 1em;
     width: 1em;
     border-radius: 0.475em;
 }
-
 .bigfoot-footnote__button:after {
     content: attr(data-footnote-number);
     position: absolute;
@@ -323,19 +278,14 @@
     -webkit-transition: color 0.25s ease;
     transition: color 0.25s ease;
 }
-#dark .bigfoot-footnote__button:after {
-    color: hsl(211, 100%, 60%);
-}
 .bigfoot-footnote__button:active:after,
 .bigfoot-footnote__button:focus:after {
     color: white !important;
 }
-
 .bigfoot-footnote__button:hover:after,
 .bigfoot-footnote__button.is-active:after {
     color: white !important;
 }
-
 .bigfoot-footnote__button__circle {
     display: none;
 }
